# myFastAPI-sql

./: README.md  postgres.sh  pyproject.toml
src/: app.py  congif.py  old_alembic.ini
src/api/crud/: family_crud.py
src/db/: alembic.ini  session.py
src/db/migrations/: env.py
src/db/migrations/versions/: 96223d3026a9_initial_schema.py
src/db/schemas/: __init__.py  base_class.py  child.py  parent.py  people.py  school.py
